add my plan to pages

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@storybook/react": "^8.5.3",
     "@storybook/test": "^8.5.3",
     "@types/node": "^20",
+    "@types/prop-types": "^15.7.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
