--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-multi-date-picker": "^4.5.2",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^11.0.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.4",
