--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/multimonth": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@majidh1/jalalidatepicker": "^0.9.6",
+    "framer-motion": "^12.0.6",
     "next": "15.1.6",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
