add authentication & authorization

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "server": "cd server && json-server db.json -p 9090",
+    "both": "concurrently \"npm run dev\" \"npm run server\""
   },
   "dependencies": {
     "@fullcalendar/core": "^6.1.15",
@@ -17,14 +19,17 @@
     "@fullcalendar/multimonth": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@majidh1/jalalidatepicker": "^0.9.6",
+    "concurrently": "^9.1.2",
     "framer-motion": "^12.0.6",
+    "json-server": "^1.0.0-beta.3",
     "next": "15.1.6",
+    "next-auth": "^4.24.11",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-multi-date-picker": "^4.5.2",
     "react-responsive-carousel": "^3.2.23",
-    "react-toastify": "^11.0.2"
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.4",
