--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "test": "concurrently \"npm start\" \"npm run server\""
   },
   "dependencies": {
-    "@fullcalendar/core": "^6.1.15",
-    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/multimonth": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.17",
     "@majidh1/jalalidatepicker": "^0.9.6",
     "concurrently": "^9.1.2",
     "framer-motion": "^12.0.6",
